Bug 767750 - rm JSScript::evalHashLink (r=njn)